Add src folder for React files. Add scripts to package.json.

--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "repository": "https://github.com/fjzink/react-boilerplate",
   "author": "Joey Zink",
   "license": "MIT",
+  "scripts": {
+    "start": "webpack --mode development",
+    "build": "webpack --mode production"
+  },
   "devDependencies": {
     "webpack": "^4.8.1",
     "webpack-cli": "^2.1.3"
