--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "author": "Joey Zink",
   "license": "MIT",
   "scripts": {
-    "start": "webpack --mode development",
-    "build": "webpack --mode production"
+    "start": "webpack-dev-server --mode=development --color --hot",
+    "build": "webpack --mode=production"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
